fixed dark mode

--- a/src/assets/scss/main/_global.scss
+++ b/src/assets/scss/main/_global.scss
@@ -3,7 +3,7 @@
 
 :root {
   --body-font: "Inter", sans-serif;
-  --body-color: #f9fbfc;
+  --body-color: #f3f3f3;
   --primary-color: #301915;
   --secondary-color: #f3f3f3;
   --border-color: #2b3b58;
@@ -68,10 +68,10 @@
   --body-color: #000000;
   --primary-color: #ff8763;
   --secondary-color: #f3f3f3;
-  --border-color: #5e3428;
-  --bs-border-color: #5e3428;
-  --border-1st-color: #5e3428;
-  --border-2nd-color: #5e3428;
+  --border-color: #1c1c1c;
+  --bs-border-color: #1c1c1c;
+  --border-1st-color: #1c1c1c;
+  --border-2nd-color: #1c1c1c;
   --icon-color: #888888;
   --icon-alt-color: #ced1d7;
   --heading-1st-color: #ffffff;
@@ -81,11 +81,11 @@
   --para-4th-color: #ffffff;
   --para-5th-color: #ffffff;
   --para-6th-color: #ced1d7;
-  --box-1st-color: #5e3428;
-  --box-2nd-color: #5e3428;
+  --box-1st-color: #1c1c1c;
+  --box-2nd-color: #1c1c1c;
   --btn-1st-color: #1d9bf0;
   --btn-2nd-color: #185e54;
-  --section-1st-color: #48231a;
+  --section-1st-color: #323232;
   --box-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
   --box-2nd-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
   --hero-section-bg: #000428bf;
